Basic set up & connection testing

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Christopher Lam's Website</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <script src="/script.js" defer></script>
+  </head>
 
+  <body>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Projects</a>
+      <a href="#">Skills</a>
+      <a href="#">Resume</a>
+      <a href="#" Contact></a>
+    </nav>
+
+    <h1>Welcome</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
+      illum quia adipisci minus. Aperiam vero aliquid voluptatem quidem, hic
+      dignissimos.
+    </p>
+  </body>
+</html>
